removed duplicate syllables & added syllables & edited readme

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 	</head>
 	<body>
 
-	<h1>Title</h1>
+	<h1>Town Generator</h1>
 
 	<p>click on a gen to save it</p>
 
 	<div class="generate">
 		<p><button type="button" id="btn_gen">Generate</button></p>
-	
+
 		<ul id="result"></ul>
 	</div>
 
 	<div class="save">
 		<h2>Saved</h2>
-	
+
 		<ul id="saved"></ul>
 	</div>
 
